fix: spacing

--- a/src/components/Prose/index.module.css
+++ b/src/components/Prose/index.module.css
@@ -3,6 +3,7 @@
   max-width: 100%;
   padding-left: 2rem;
   padding-right: 2rem;
+  padding-bottom: 4rem;
   margin-left: auto;
   margin-right: auto;
   & h1,
