--- a/src/global.css
+++ b/src/global.css
@@ -58,8 +58,8 @@ h2 {
   font-weight: 500;
   font-size: 1.8rem;
   line-height: 1.2;
-  margin-top: 2em;
-  margin-bottom: 1em;
+  margin-top: 1.2em;
+  margin-bottom: 0.6em;
 }
 
 h3 {
